fix CSS: stop flex from making <article> too small if there is too little content

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ nav img {
 /**** Body *****/
 article {
     max-width: 800px;
+    min-width: 80%;
     margin: auto auto;
     margin-top: 20px;
     line-height: 1.6;
